RDCC-3120: addressed review comments